@@ -2,23 +2,25 @@ package service;
 
 import dto.Veiculo.VeiculoCreateDTO;
 import dto.Veiculo.VeiculoDTO;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import exception.ResourceNotFoundException;
 import exception.InvalidRequestException;
 import model.Usuario;
 import model.Veiculo;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import repository.UsuarioRepository;
 import repository.VeiculoRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class VeiculoService {
+
+    private static final String USUARIO_NAO_ENCONTRADO = "Usuário não encontrado com ID: ";
+    private static final String VEICULO_NAO_ENCONTRADO = "Veículo não encontrado com ID: ";
 
     private final VeiculoRepository veiculoRepository;
     private final UsuarioRepository usuarioRepository;
@@ -35,12 +37,12 @@ public class VeiculoService {
         List<Veiculo> veiculos = veiculoRepository.findAll();
         return veiculos.stream()
                 .map(veiculo -> modelMapper.map(veiculo, VeiculoDTO.class))
-                .collect(Collectors.toList());
+                .toList(); // Substituição para Stream.toList()
     }
 
     public VeiculoDTO obterPorId(Long id) {
         Veiculo veiculo = veiculoRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Veículo não encontrado com ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(VEICULO_NAO_ENCONTRADO + id));
         return modelMapper.map(veiculo, VeiculoDTO.class);
     }
 
@@ -51,21 +53,20 @@ public class VeiculoService {
         }
         return veiculos.stream()
                 .map(veiculo -> modelMapper.map(veiculo, VeiculoDTO.class))
-                .collect(Collectors.toList());
+                .toList(); // Substituição para Stream.toList()
     }
 
     public List<VeiculoDTO> listarVeiculosPorUsuario(Long usuarioId) {
         Usuario usuario = usuarioRepository.findById(usuarioId)
-                .orElseThrow(() -> new ResourceNotFoundException("Usuário não encontrado com ID: " + usuarioId));
+                .orElseThrow(() -> new ResourceNotFoundException(USUARIO_NAO_ENCONTRADO + usuarioId));
 
         List<Veiculo> veiculos = veiculoRepository.findByUsuarioNome(usuario.getNome());
         return veiculos.stream()
                 .map(veiculo -> modelMapper.map(veiculo, VeiculoDTO.class))
-                .collect(Collectors.toList());
+                .toList(); // Substituição para Stream.toList()
     }
 
     public VeiculoDTO criarVeiculo(VeiculoCreateDTO veiculoCreateDTO) {
-        // Verificar se os campos obrigatórios estão preenchidos
         if (veiculoCreateDTO.getMarca() == null || veiculoCreateDTO.getMarca().isEmpty()) {
             throw new InvalidRequestException("A marca do veículo é obrigatória.");
         }
@@ -75,15 +76,12 @@ public class VeiculoService {
         if (veiculoCreateDTO.getAno() == null) {
             throw new InvalidRequestException("O ano do veículo é obrigatório.");
         }
-
-        // Verificar se a marca já está em uso
         if (veiculoRepository.existsByMarca(veiculoCreateDTO.getMarca())) {
             throw new InvalidRequestException("A marca já está em uso.");
         }
 
-        // Obter o usuário associado
         Usuario usuario = usuarioRepository.findById(veiculoCreateDTO.getUsuarioId())
-                .orElseThrow(() -> new ResourceNotFoundException("Usuário não encontrado com ID: " + veiculoCreateDTO.getUsuarioId()));
+                .orElseThrow(() -> new ResourceNotFoundException(USUARIO_NAO_ENCONTRADO + veiculoCreateDTO.getUsuarioId()));
 
         Veiculo veiculo = modelMapper.map(veiculoCreateDTO, Veiculo.class);
         veiculo.setUsuario(usuario);
@@ -94,11 +92,9 @@ public class VeiculoService {
 
     public VeiculoDTO atualizarVeiculo(Long id, VeiculoCreateDTO veiculoCreateDTO) {
         Veiculo veiculoExistente = veiculoRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Veículo não encontrado com ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(VEICULO_NAO_ENCONTRADO + id));
 
-        // Atualizar os campos
         if (veiculoCreateDTO.getMarca() != null && !veiculoCreateDTO.getMarca().equals(veiculoExistente.getMarca())) {
-            // Verificar se a nova marca já está em uso
             if (veiculoRepository.existsByMarca(veiculoCreateDTO.getMarca())) {
                 throw new InvalidRequestException("A marca já está em uso.");
             }
@@ -113,14 +109,14 @@ public class VeiculoService {
             veiculoExistente.setAno(veiculoCreateDTO.getAno());
         }
 
+        // Corrigindo a expressão booleana para usar um tipo primitivo
         if (veiculoCreateDTO.getIsEletrico() != null) {
             veiculoExistente.setIsEletrico(veiculoCreateDTO.getIsEletrico() ? 1 : 0);
         }
 
         if (veiculoCreateDTO.getUsuarioId() != null && !veiculoCreateDTO.getUsuarioId().equals(veiculoExistente.getUsuario().getUsuarioId())) {
-            // Obter o novo usuário associado
             Usuario novoUsuario = usuarioRepository.findById(veiculoCreateDTO.getUsuarioId())
-                    .orElseThrow(() -> new ResourceNotFoundException("Usuário não encontrado com ID: " + veiculoCreateDTO.getUsuarioId()));
+                    .orElseThrow(() -> new ResourceNotFoundException(USUARIO_NAO_ENCONTRADO + veiculoCreateDTO.getUsuarioId()));
             veiculoExistente.setUsuario(novoUsuario);
         }
 
@@ -130,7 +126,7 @@ public class VeiculoService {
 
     public void deletarVeiculo(Long id) {
         if (!veiculoRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Veículo não encontrado com ID: " + id);
+            throw new ResourceNotFoundException(VEICULO_NAO_ENCONTRADO + id);
         }
         veiculoRepository.deleteById(id);
     }
